--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div>
             <a href="https://www.google.com/search?q=home" target="blank">Home</a>
             <span>|</span>
-            <a href="https://www.google.com/search?q=practical+1" target="blank">Practical 1</a>
+            <a href="https://harshit-kumar-singh.github.io/Full-Stack-College-Assignment-1/" target="blank">Practical 1</a>
             <span>|</span>
-            <a href="https://www.google.com/search?q=practical+2" target="blank">Practical 2</a>
+            <a href="https://harshit-kumar-singh.github.io/Full-Stack-Assignment-2/" target="blank">Practical 2</a>
             <span>|</span>
-            <a href="https://www.google.com/search?q=practical+3" target="blank">Practical 3</a>
+            <a href="https://harshit-kumar-singh.github.io/My_Portfolio/" target="blank">Practical 3</a>
             <span>|</span>
-            <a href="https://www.google.com/search?q=practical+4" target="blank">Practical 4</a>
+            <a href="https://harshit-kumar-singh.github.io/Full-stack-college-assignment-4" target="blank">Practical 4</a>
             <span>|</span>
-            <a href="https://www.google.com/search?q=practical+5" target="blank">Practical 5</a>
+            <a href="https://harshit-kumar-singh.github.io/Full-Stack-Assignment-5/" target="blank">Practical 5</a>
         </div>
     </nav>
     <h1>Introduction to Front-End Technologies</h1>
